--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-business-consulting.html">
+										<a href="index.html">
 											<img alt="Porto" width="129" height="83" src="img/logos/logo-t.png">
 										</a>
 									</div>
@@ -73,74 +73,74 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link active" href="demo-business-consulting.html">
+														<a class="nav-link active" href="index.html">
 															Accueil
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-about-us.html">
+														<a class="nav-link" href="about-us.html">
 															A propos
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="demo-business-consulting-expertise.html">
-															Projets
+														<a class="dropdown-toggle nav-link" href="expertise.html">
+															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!--ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Finance
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Restructuring
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Economic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Litigation Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Strategic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Tech Consulting
 																</a>
 															</li>
-														</ul>
+														</ul-->
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-cases.html">
-															Partenariat
+														<a class="nav-link" href="cases.html">
+															Projets
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-tertimonials.html">
+														<a class="nav-link" href="tertimonials.html">
 															Financement
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-team.html">
-															Actualites
+														<a class="nav-link" href="team.html">
+															Equipes
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-blog.html">
-															Presse
+														<a class="nav-link" href="blog.html">
+															Actualités
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-contact-us.html">
+														<a class="nav-link" href="contact-us.html">
 															Contacts
 														</a>
 													</li>
@@ -164,14 +164,13 @@
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>- Corporate Finance</h1>
-								<span class="d-block text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+								<h1>Actualités</h1>
+								<span class="d-block text-4">Toutes les news</span>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
-									<li><a href="demo-business-consulting.html">Home</a></li>
-									<li><a href="demo-business-consulting-expertise.html">Projets</a></li>
-									<li class="active">Corporate Finance</li>
+									<li><a href="index.html">Accueil</a></li>
+									<li class="active">Actualités</li>
 								</ul>
 							</div>
 						</div>
@@ -179,140 +178,150 @@
 				</section>
 
 				<div class="container">
-					<div class="row pt-1 pb-4 mb-3">
-						<div class="col-lg-8">
-
-							<p class="lead mb-4">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat.</p>
-							<p class="clearfix">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus. Nunc et feugiat arcu, in placerat risus. Phasellus condimentum sapien vitae. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper.</p>
-							<p>Lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat.</p>
-
-							<div class="accordion without-bg custom-accordion-style-1 pt-4 pb-4" id="accordion7">
-								<div class="card card-default">
-									<div class="card-header">
-										<h4 class="card-title m-0">
-											<a class="accordion-toggle" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7One" aria-expanded="true">
-												Praesent sit amet quam a lorem commodo tincidunt.
-												<span class="custom-accordion-plus"></span>
-											</a>
-										</h4>
-									</div>
-									<div id="collapse7One" class="collapse show" aria-expanded="true">
-										<div class="card-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus.</p>
+					<div class="row pt-1 pb-5 mb-3">
+						<div class="col">
+							<div class="row mt-2 mb-2">
+								<article class="blog-post col">
+									<div class="row">
+										<div class="col-sm-8 col-lg-5 position-relative">
+											<div class="blog-post-image-wrapper">
+												<a href="blog-detail.html" title="Read More">
+													<img src="img/articles/Webp.net-resizeimage.jpg" alt class="img-fluid mb-4" />
+												</a>
+												<span class="blog-post-date bg-color-primary text-color-light font-weight-bold">
+													20
+													<span class="month-year font-weight-light">
+														Oct-16
+													</span>
+												</span>
+											</div>
+										</div>
+										<div class="col-sm-12 col-lg-7">
+											<h2> Global Opportunities</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus. Nunc et feugiat arcu, in placerat risus. Phasellus condimentum sapien vi...</p>
+											<hr class="solid">
+											<div class="post-infos d-flex">
+												<span class="info posted-by">
+													Posted by:
+													<span class="post-author font-weight-semibold text-color-dark">
+														John Doe
+													</span>
+												</span>
+												<span class="info comments ms-5">
+													Comments:
+													<span class="comments-number text-color-primary font-weight-semibold">
+														15
+													</span>
+												</span>
+												<span class="info like ms-5">
+													Like:
+													<span class="like-number font-weight-semibold custom-color-red">
+														38
+													</span>
+												</span>
+											</div>
+											<a class="btn btn-outline custom-border-width btn-primary custom-border-radius font-weight-semibold text-uppercase mt-5" href="blog-detail.html" title="Read More">Read More</a>
 										</div>
 									</div>
-								</div>
-								<div class="card card-default">
-									<div class="card-header">
-										<h4 class="card-title m-0">
-											<a class="accordion-toggle collapsed" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7Two" aria-expanded="false">
-												Integer ac elit id est euismod pellentesque.
-												<span class="custom-accordion-plus"></span>
-											</a>
-										</h4>
-									</div>
-									<div id="collapse7Two" class="collapse" aria-expanded="false" style="height: 0px;">
-										<div class="card-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus.</p>
-										</div>
-									</div>
-								</div>
-								<div class="card card-default">
-									<div class="card-header">
-										<h4 class="card-title m-0">
-											<a class="accordion-toggle collapsed" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7Three" aria-expanded="false">
-												Cras interdum neque sit amet justo maximus, ut sollicitudin eros.
-												<span class="custom-accordion-plus"></span>
-											</a>
-										</h4>
-									</div>
-									<div id="collapse7Three" class="collapse" aria-expanded="false" style="height: 0px;">
-										<div class="card-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus.</p>
-										</div>
-									</div>
-								</div>
-								<div class="card card-default">
-									<div class="card-header">
-										<h4 class="card-title m-0">
-											<a class="accordion-toggle collapsed" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7Four" aria-expanded="false">
-												Pellentesque in ex molestie, convallis nulla ut, ornare erat.
-												<span class="custom-accordion-plus"></span>
-											</a>
-										</h4>
-									</div>
-									<div id="collapse7Four" class="collapse" aria-expanded="false" style="height: 0px;">
-										<div class="card-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus.</p>
-										</div>
-									</div>
-								</div>
+								</article>
 							</div>
 
-							<p>Lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat.</p>
+							<hr class="solid tall mt-5">
 
-						</div>
-						<div class="col-lg-4">
-							<img src="img/articles/IMG-20210427_CCIB-1.jpg" class="img-fluid mb-4" alt="">
-
-							<h2 class="font-weight-bold text-color-dark">- Nos critères d'éligibilité</h2>
-							<div class="owl-carousel owl-theme nav-bottom rounded-nav numbered-dots ps-1 pe-1" data-plugin-options="{'items': 1, 'loop': false, 'dots': true, 'nav': false}">
-								<div>
-									<div class="custom-step-item">
-										<span class="step text-uppercase">
-											
-											<span class="step-number text-color-primary">
-												01
-											</span>
-										</span>
-										<div class="step-content">
-											<h4 class="mb-3">CRITERE 1<br><strong>Expérience des Entrepreneurs</strong></h4>
-											<p>Entrepreneurs ayant une forte expérience dans le domaine de leur projet.</p>
+							<div class="row mt-2 mb-2">
+								<article class="blog-post col">
+									<div class="row">
+										<div class="col-sm-8 col-lg-5 position-relative">
+											<div class="blog-post-image-wrapper">
+												<a href="blog-detail.html" title="Read More">
+													<img src="img/articles/img-20210427_ccib-1.jpg" alt class="img-fluid mb-4" />
+												</a>
+												<span class="blog-post-date bg-color-primary text-color-light font-weight-bold">
+													20
+													<span class="month-year font-weight-light">
+														Oct-16
+													</span>
+												</span>
+											</div>
+										</div>
+										<div class="col-sm-12 col-lg-7">
+											<h2> Starting a Business</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus. Nunc et feugiat arcu, in placerat risus. Phasellus condimentum sapien vi...</p>
+											<hr class="solid">
+											<div class="post-infos d-flex">
+												<span class="info posted-by">
+													Posted by:
+													<span class="post-author font-weight-semibold text-color-dark">
+														John Doe
+													</span>
+												</span>
+												<span class="info comments ms-5">
+													Comments:
+													<span class="comments-number text-color-primary font-weight-semibold">
+														15
+													</span>
+												</span>
+												<span class="info like ms-5">
+													Like:
+													<span class="like-number font-weight-semibold custom-color-red">
+														38
+													</span>
+												</span>
+											</div>
+											<a class="btn btn-outline custom-border-width btn-primary custom-border-radius font-weight-semibold text-uppercase mt-5" href="blog-detail.html" title="Read More">Read More</a>
 										</div>
 									</div>
-								</div>
-								<div>
-									<div class="custom-step-item">
-										<span class="step text-uppercase">
-											<span class="step-number text-color-primary">
-												02
-											</span>
-										</span>
-										<div class="step-content">
-											<h4 class="mb-3">CRITERE 2<br> <strong>Maturité du projet</strong></h4>
-											<p>Projet en création, dont l'étude est finalisée, ou amorçage (<5 ans).</p>
-										</div>
-									</div>
-								</div>
-								<div>
-									<div class="custom-step-item">
-										<span class="step text-uppercase">
-											<span class="step-number text-color-primary">
-												03
-											</span>
-										</span>
-										<div class="step-content">
-											<h4 class="mb-3">CRITERE 3<br> <strong>Secteurs visés</strong></h4>
-											<p>
-											- Secteurs d'activité à fort potentiel (Industrie et Services)<br>
-											- Les secteurs à vocation export seront privilégiés</p>
-										</div>
-									</div>
-								</div>
-								<div>
-									<div class="custom-step-item">
-										<span class="step text-uppercase">
-											<span class="step-number text-color-primary">
-												04
-											</span>
-										</span>
-										<div class="step-content">
-											<h4 class="mb-3">CRITERE 4<br> <strong>Potentiel de croissance</strong></h4>
-											<p>Potentiel de CA > 100 MDH et/ou EBE > 15 MDH (à horizon 5-6 ans)</p>
-										</div>
-									</div>
-								</div>
+								</article>
 							</div>
+
+							<hr class="solid tall mt-5">
+
+							<div class="row mt-2 mb-2">
+								<article class="blog-post col">
+									<div class="row">
+										<div class="col-sm-8 col-lg-5 position-relative">
+											<div class="blog-post-image-wrapper">
+												<a href="blog-detail.html" title="Read More">
+													<img src="img/articles/2.jpg" alt class="img-fluid mb-4" />
+												</a>
+												<span class="blog-post-date bg-color-primary text-color-light font-weight-bold">
+													20
+													<span class="month-year font-weight-light">
+														Oct-16
+													</span>
+												</span>
+											</div>
+										</div>
+										<div class="col-sm-12 col-lg-7">
+											<h2> Getting Ready</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus. Nunc et feugiat arcu, in placerat risus. Phasellus condimentum sapien vi...</p>
+											<hr class="solid">
+											<div class="post-infos d-flex">
+												<span class="info posted-by">
+													Posted by:
+													<span class="post-author font-weight-semibold text-color-dark">
+														John Doe
+													</span>
+												</span>
+												<span class="info comments ms-5">
+													Comments:
+													<span class="comments-number text-color-primary font-weight-semibold">
+														15
+													</span>
+												</span>
+												<span class="info like ms-5">
+													Like:
+													<span class="like-number font-weight-semibold custom-color-red">
+														38
+													</span>
+												</span>
+											</div>
+											<a class="btn btn-outline custom-border-width btn-primary custom-border-radius font-weight-semibold text-uppercase mt-5" href="blog-detail.html" title="Read More">Read More</a>
+										</div>
+									</div>
+								</article>
+							</div>
+
 						</div>
 					</div>
 				</div>
@@ -321,7 +330,7 @@
 					<div class="container">
 						<div class="row justify-content-md-center">
 							<div class="col-lg-6 mb-5 mb-lg-0">
-								<h2 class="font-weight-bold">- Contacts</h2>
+								<h2 class="font-weight-bold">Contacts</h2>
 								<p class="custom-opacity-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper.</p>
 								<div class="row">
 									<div class="col-md-6 custom-sm-margin-top">
@@ -380,7 +389,7 @@
 								</div>
 							</div>
 							<div class="col-lg-6 custom-sm-margin-top">
-								<h2 class="font-weight-bold">- Newsletter</h2>
+								<h2 class="font-weight-bold">Newsletter</h2>
 								<form class="contact-form custom-contact-form-style-1 form-errors-light" action="php/contact-form.php" method="POST">
 									<div class="contact-form-success alert alert-success d-none mt-4">
 										<strong>Success!</strong> Your message has been sent to us.
@@ -426,18 +435,18 @@
 						</div>
 					</div>
 				</section>
-
 			</div> 
 
 			<footer id="footer">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 text-center pb-4">
-							<p>2022 © CDCB <span class="text-color-light"></span> - Tous droits réservés</p>
+							<p>2022 © Porto <span class="text-color-light">Business Consulting</span> - Copyright All Rights Reserved</p>
 						</div>
 					</div>
 				</div>
 			</footer>
+
 		</div>
 
 		<!-- Vendor -->
