--- a/cases-detail.html
+++ b/cases-detail.html
@@ -60,7 +60,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-business-consulting.html">
+										<a href="index.html">
 											<img alt="Porto" width="129" height="83" src="img/logos/logo-t.png">
 										</a>
 									</div>
@@ -73,74 +73,74 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link active" href="demo-business-consulting.html">
+														<a class="nav-link active" href="index.html">
 															Accueil
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-about-us.html">
+														<a class="nav-link" href="about-us.html">
 															A propos
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="demo-business-consulting-expertise.html">
-															Projets
+														<a class="dropdown-toggle nav-link" href="expertise.html">
+															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!--ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Finance
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Restructuring
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Economic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Litigation Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Strategic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Tech Consulting
 																</a>
 															</li>
-														</ul>
+														</ul-->
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-cases.html">
-															Partenariat
+														<a class="nav-link" href="cases.html">
+															Projets
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-tertimonials.html">
+														<a class="nav-link" href="tertimonials.html">
 															Financement
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-team.html">
-															Actualites
+														<a class="nav-link" href="team.html">
+															Equipes
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-blog.html">
-															Presse
+														<a class="nav-link" href="blog.html">
+															Actualités
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-contact-us.html">
+														<a class="nav-link" href="contact-us.html">
 															Contacts
 														</a>
 													</li>
@@ -160,17 +160,18 @@
 
 			<div role="main" class="main">
 
-				<section class="page-header page-header-modern bg-dark page-header-md custom-page-header">
+				<section class="page-header page-header-modern bg-color-quaternary page-header-md custom-page-header">
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>- Partenariats</h1>
-								<span class="d-block text-4">Les Entreprises</span>
+								<h1>- Candidature en ligne</h1>
+								<span class="d-block text-4">Nous prenons les candidatures depuis notre plateforme</span>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
 									<li><a href="demo-business-consulting.html">Accueil</a></li>
-									<li class="active">Partenariat</li>
+									<li><a href="demo-business-consulting-cases.html">étapes</a></li>
+									<li class="active">Candidature en ligne</li>
 								</ul>
 							</div>
 						</div>
@@ -178,16 +179,23 @@
 				</section>
 
 				<div class="container">
-					<div class="row pt-1 pb-4 mb-3">
+					<div class="row pt-1 pb-5 mb-3">
+
 						<div class="col">
-							<ul class="nav nav-pills sort-source mb-4" data-sort-id="portfolio" data-option-key="filter" data-plugin-options="{'layoutMode': 'masonry', 'filter': '*'}">
-								<li class="nav-item active" data-option-value="*" class=""><a class="nav-link active btn btn-outline custom-border-width btn-primary custom-border-radius custom-border-radius-small text-uppercase me-2 mb-2" href="#">Show All</a></li>
-								<li class="nav-item" data-option-value=".economic"><a class="nav-link btn btn-outline custom-border-width btn-primary custom-border-radius custom-border-radius-small text-uppercase me-2 mb-2" href="#">Economic</a></li>
-								<li class="nav-item" data-option-value=".strategic"><a class="nav-link btn btn-outline custom-border-width btn-primary custom-border-radius custom-border-radius-small text-uppercase me-2 mb-2" href="#">Strategic</a></li>
-								<li class="nav-item" data-option-value=".tech"><a class="nav-link btn btn-outline custom-border-width btn-primary custom-border-radius custom-border-radius-small text-uppercase me-2 mb-2" href="#">Tech</a></li>
-							</ul>
+							<div class="row">
+								<div class="col-lg-3">
+									<p class="pb-0 mb-0 text-4 text-dark"><strong>Okler Themes</strong></p>
+									<p class="pb-0 mb-4">Industry</p>
+								</div>
+							</div>
+
+							<p>Gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat.</p>
+
+							<!-- <img src="img/demos/business-consulting/cases/case-4.jpg" style="max-width: 260px;" class="img-fluid float-end ms-5 mb-4" alt=""> -->
+
 						</div>
 					</div>
+
 				</div>
 
 				<section class="section section-text-light section-background m-0" style="background: url('img/gallery/wp.png'); background-size: cover;">
