--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-business-consulting.html">
+										<a href="index.html">
 											<img alt="Porto" width="129" height="83" src="img/logos/logo-t.png">
 										</a>
 									</div>
@@ -73,74 +73,74 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link active" href="demo-business-consulting.html">
+														<a class="nav-link active" href="index.html">
 															Accueil
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-about-us.html">
+														<a class="nav-link" href="about-us.html">
 															A propos
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="demo-business-consulting-expertise.html">
-															Projets
+														<a class="dropdown-toggle nav-link" href="expertise.html">
+															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!--ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Finance
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Restructuring
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Economic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Litigation Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Strategic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Tech Consulting
 																</a>
 															</li>
-														</ul>
+														</ul-->
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-cases.html">
-															Partenariat
+														<a class="nav-link" href="cases.html">
+															Projets
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-tertimonials.html">
+														<a class="nav-link" href="tertimonials.html">
 															Financement
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-team.html">
-															Actualites
+														<a class="nav-link" href="team.html">
+															Equipes
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-blog.html">
-															Presse
+														<a class="nav-link" href="blog.html">
+															Actualités
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-contact-us.html">
+														<a class="nav-link" href="contact-us.html">
 															Contacts
 														</a>
 													</li>
@@ -164,12 +164,12 @@
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>- A propos</h1>
-								<span class="d-block text-4">Qui sommes nous</span>
+								<h1>FACS</h1>
+								<span class="d-block text-4">Le Programme en bref</span>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
-									<li><a href="demo-business-consulting.html">Accueil</a></li>
+									<li><a href="index.html">Accueil</a></li>
 									<li class="active">A propos</li>
 								</ul>
 							</div>
@@ -180,30 +180,86 @@
 				<div class="container">
 					<div class="row pt-1 pb-4 mb-3">
 						<div class="col">
-							<p class="lead mb-4">La Caisse des Dépôts et Consignations du Bénin (CDC Bénin) est investie d'une mission d'intérêt général en appui aux politiques publiques conduites par l’Etat et les collectivités territoriales, notamment en matière de développement économique et social.</p>
+							<ul>
+								<li class="lead mb-4">Vous êtes jeune diplômé et vous avez des idées de projets très innovantes et à forte valeur ajoutée ;</li>
+								<li class="lead mb-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d’entreprise ? </li>
+								<li class="lead mb-4">Vous souhaitez vous entourer de l’expertise nécessaire et vous donner les moyens financiers
+								adéquats pour renforcer le décollage de votre projet ?</li>
+								<li class="lead mb-4">Vous êtes entrepreneur avec une expérience avérée dans votre secteur d’activité et vous avez des
+								idées innovantes pour améliorer votre productivité et accroitre votre marché,</li>
+							</ul>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus. Nunc et feugiat arcu, in placerat risus. Phasellus condimentum sapien vitae.</p>
+							<p>Le Fonds d’Appui Catalytique et de Solidarité (FACS), un programme de financement et d ’accompagne-
+								ment des entrepreneur(e)s créé par la Chambre de Commerce et d’Industrie du Bénin (CCI Bénin) et la
+								Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) vous apporte la solution.
+								Le FACS a pour objectif de faire émerger une nouvelle génération d’entrepreneurs champions, capables
+								de développer des entreprises à forte valeur ajoutée et de catalyser la transformation productive de
+								l’économie béninoise.</p>
+								<p>Le programme offrira aux entrepreneur(e)s sélectionné(e)s un financement en fonds propres et quasi -
+								fonds propres, pouvant aller jusqu’à 200 millions en contrepartie d'une participation minoritaire, et un
+								accompagnement stratégique et opérationnel, pré investissement et post investissement.</p>
+								
+								<p>Pour être éligible au programme FACS, il faut : </p>
+								<ul>
+									<li>Avoir un projet de création d’entreprise ou une entreprise en amorçage (moins de 5 ans) ou en crois-
+									sance qui justifie d’une expérience avérée en lien avec le secteur d’activité cible ;</li>
+									<li>Avoir un marché profond et/ou en forte croissance dans les secteurs de l’agriculture, de la petite
+									industrie et des services aux Bâtiments et Travaux Publics ;</li>
+									<li>Avoir des projections financières à horizon 5-6 ans ;</li>
+								</ul>
+								<p>Pour en savoir plus, nous vous invitons à assister à une présentation du programme le mercredi 25
+								mai 2022 à partir de 10h00 au siège de la CCIB à Cotonou et dans toutes ses antennes sur le territoire
+								national (Porto Novo, Parakou, Lokossa, Abomey, Natitingou). Pour ceux qui ne pourront pas se dépla-
+								cer, nous avons prévu un accès par visioconférence afin de suivre l'événement et interagir en direct à
+								travers un lien qui leur sera communiqué à travers les réseaux sociaux LinkedIn @xxxxxxxx et Face-
+								book @yyyyyyyyyyy, auxquelles nous vous invitons à vous abonner. Veuillez également consulter le
+								site du programme FACS : https://www.entrepreneur-champion-facs.bj pour en savoir plus.</p>
+								<p>Cordialement,
+								Le Secrétariat Exécutif du FACS</p>
 
-							<div class="row pb-4">
-								<div class="col-lg-4">
-									<ul class="list list-icons list-icons-style-3 list-tertiary">
-										<li><i class="fas fa-arrow-right"></i> Faciliter l'accès au financement</li>
-										<li><i class="fas fa-arrow-right"></i> Faire baisser les taux d'intérêt</li>
-									</ul>	
+								<div class="row pb-4">
+									<h3>Le programme FACS en Bref</h3>
+									<div class="col-lg-6">
+										<ul class="list list-icons list-icons-style-3 list-tertiary">
+											<li><i class="fas fa-chevron-right"></i> <b>POSITIONNEMENT</b><br>
+												Le Fonds d’Appui Catalytique et de Solidarité est un programme d’accompagnement
+												et de financement :
+												<ul>
+													<li>d’entreprises innovantes (start up), en amorçage ou en croissance;</li>
+													<li>de projets ambitieux et à fort potentiel de croissance dans les secteurs de l’agriculture de la petite industrie et des services aux Bâtiments et Travaux Publics</li></ul></li>
+											<li><i class="fas fa-chevron-right"></i>
+												<b>MODE D’INTERVENTION</b><br>
+												Prise de participation dans des sociétés— projets au stade de création (< 1an) ou en
+	amorçage (< 5 ans) ou en croissance (indifférent)
+											</li>
+										</ul>	
+									</div>
+									<!--div class="col-lg-4">
+										<ul class="list list-icons list-icons-style-3 list-tertiary">
+											<li><i class="fas fa-chevron-right"></i> Real Estate Professionals</li>
+											<li><i class="fas fa-chevron-right"></i> Chartered Financial Analysts</li>
+										</ul>
+									</div-->
+									<div class="col-lg-6">
+										<ul class="list list-icons list-icons-style-3 list-tertiary">
+											<li><i class="fas fa-chevron-right"></i> 
+												<b>INSTRUMENT D’INTERVENTION</b><br>
+												<ul>
+													<li>Investissement en fonds propres et quasi-fonds propres</li>
+													<li>Start up ( 1 à 5 millions) - amorçage (5 à 30 millions) - croissance (jusqu’à 200 millions)</li>
+												</ul>
+											</li>
+											<li><i class="fas fa-chevron-right"></i> 
+												<b>DUREE D’INVESTISSEMENT</b><br>
+												<ul>
+													<li>Pas de durée de référence – en moyenne entre 5 et 6 ans</li>
+													<li>Sortie dès que possible au profit des Entrepreneurs ; d’un fonds d’investisse-
+														ment ; d’un opérateur stratégique ou sur le marché</li>
+												</ul>
+											</li>
+										</ul>
+									</div>
 								</div>
-								<div class="col-lg-4">
-									<ul class="list list-icons list-icons-style-3 list-tertiary">
-										<li><i class="fas fa-chevron-right"></i> Assurer la gestion sous mandat</li>
-										<li><i class="fas fa-chevron-right"></i> Assurer la gestion financière</li>
-									</ul>
-								</div>
-								<div class="col-lg-4">
-									<ul class="list list-icons list-icons-style-3 list-tertiary">
-										<li><i class="fas fa-chevron-right"></i> Mener des activités financières</li>
-										<li><i class="fas fa-chevron-right"></i> Exercer toutes autres activités se rapportant à sa mission.</li>
-									</ul>
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -212,7 +268,7 @@
 					<div class="container">
 						<div class="row justify-content-md-center">
 							<div class="col-lg-6 mb-5 mb-lg-0">
-								<h2 class="font-weight-bold">- Contacts</h2>
+								<h2 class="font-weight-bold">Contacts</h2>
 								<p class="custom-opacity-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper.</p>
 								<div class="row">
 									<div class="col-md-6 custom-sm-margin-top">
@@ -271,7 +327,7 @@
 								</div>
 							</div>
 							<div class="col-lg-6 custom-sm-margin-top">
-								<h2 class="font-weight-bold">- Newsletter</h2>
+								<h2 class="font-weight-bold">Newsletter</h2>
 								<form class="contact-form custom-contact-form-style-1 form-errors-light" action="php/contact-form.php" method="POST">
 									<div class="contact-form-success alert alert-success d-none mt-4">
 										<strong>Success!</strong> Your message has been sent to us.
