--- a/expertise.html
+++ b/expertise.html
@@ -60,7 +60,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-business-consulting.html">
+										<a href="index.html">
 											<img alt="Porto" width="129" height="83" src="img/logos/logo-t.png">
 										</a>
 									</div>
@@ -73,74 +73,74 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link active" href="demo-business-consulting.html">
+														<a class="nav-link active" href="index.html">
 															Accueil
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-about-us.html">
+														<a class="nav-link" href="about-us.html">
 															A propos
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="demo-business-consulting-expertise.html">
-															Projets
+														<a class="dropdown-toggle nav-link" href="expertise.html">
+															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!--ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Finance
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Restructuring
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Economic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Litigation Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Strategic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Tech Consulting
 																</a>
 															</li>
-														</ul>
+														</ul-->
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-cases.html">
-															Partenariat
+														<a class="nav-link" href="cases.html">
+															Projets
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-tertimonials.html">
+														<a class="nav-link" href="tertimonials.html">
 															Financement
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-team.html">
-															Actualites
+														<a class="nav-link" href="team.html">
+															Equipes
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-blog.html">
-															Presse
+														<a class="nav-link" href="blog.html">
+															Actualités
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-contact-us.html">
+														<a class="nav-link" href="contact-us.html">
 															Contacts
 														</a>
 													</li>
@@ -160,18 +160,17 @@
 
 			<div role="main" class="main">
 
-				<section class="page-header page-header-modern bg-color-quaternary page-header-md custom-page-header">
+				<section class="page-header page-header-modern bg-dark page-header-md custom-page-header">
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>- Candidature en ligne</h1>
-								<span class="d-block text-4">Nous prenons les candidatures depuis notre plateforme</span>
+								<h1>Missions</h1>
+								<span class="d-block text-4">Que faisons-nous</span>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
-									<li><a href="demo-business-consulting.html">Accueil</a></li>
-									<li><a href="demo-business-consulting-cases.html">étapes</a></li>
-									<li class="active">Candidature en ligne</li>
+									<li><a href="index.html">Accueil</a></li>
+									<li class="active">Projet</li>
 								</ul>
 							</div>
 						</div>
@@ -180,29 +179,102 @@
 
 				<div class="container">
 					<div class="row pt-1 pb-5 mb-3">
-
 						<div class="col">
+							<div class="row mb-3">
+								<div class="col">
+									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
+										<div class="feature-box-icon">
+											<img src="img/avatars/avatar-money.png" alt="">
+										</div>
+										<div class="feature-box-info ms-3">
+											<h4 class="font-weight-normal text-5">Corporate Finance</h4>
+											<p class="text-2">Renforcement du business plan et des hypothèses sous-jacentes en amont de l'investissement</p>
+											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row mb-3">
+								<div class="col">
+									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
+										<div class="feature-box-icon">
+											<img src="img/avatars/avatar-money.png" alt="">
+										</div>
+										<div class="feature-box-info ms-3">
+											<h4 class="font-weight-normal text-5">Corp Restructuring</h4>
+											<p class="text-2">Offre financière se basant sur un mécanisme de valorisation flexible et « Entrepreneur Friendly » permettant d'aligner les intérêts de CDG Invest et des Entrepreneurs via divers mécanismes comme la relution de ces derniers au capital de la société en cas de surperformance</p>
+											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row mb-3">
+								<div class="col">
+									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
+										<div class="feature-box-icon">
+											<img src="img/avatars/avatar-money.png" alt="">
+										</div>
+										<div class="feature-box-info ms-3">
+											<h4 class="font-weight-normal text-5">Economic Consulting</h4>
+											<p class="text-2">Investissement jusqu'à 20 MDHS en fonds propres et quasi-fonds propres étalé sur toute la durée d'investissement, permettant de sécuriser les besoins d'investissement futurs et prédictibles de la société, sous réserve de l'atteinte d'objectifs déterminés ou de la réalisation de conditions suspensives</p>
+											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row mb-3">
+								<div class="col">
+									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
+										<div class="feature-box-icon">
+											<img src="img/avatars/avatar-money.png" alt="">
+										</div>
+										<div class="feature-box-info ms-3">
+											<h4 class="font-weight-normal text-5">Litigation Consulting</h4>
+											<p class="text-2">Recherche de financement complémentaire sans caution personnelle et de subventions au cas par cas.</p>
+											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row mb-3">
+								<div class="col">
+									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
+										<div class="feature-box-icon">
+											<img src="img/avatars/avatar-money.png" alt="">
+										</div>
+										<div class="feature-box-info ms-3">
+											<h4 class="font-weight-normal text-5">Strategic Consulting</h4>
+											<p class="text-2">Introduction de Best Practices et aide à la mise en place d'outils de reporting et de gestion adaptés</p>
+											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
 							<div class="row">
-								<div class="col-lg-3">
-									<p class="pb-0 mb-0 text-4 text-dark"><strong>Okler Themes</strong></p>
-									<p class="pb-0 mb-4">Industry</p>
+								<div class="col">
+									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
+										<div class="feature-box-icon">
+											<img src="img/avatars/avatar-money.png" alt="">
+										</div>
+										<div class="feature-box-info ms-3">
+											<h4 class="font-weight-normal text-5">Tech Consulting</h4>
+											<p class="text-2">Les règles de gouvernance seront explicitées dans le cadre d'un Pacte d'Actionnaires qui comportera (i) des clauses relatives à la gestion de la Société; (ii) des clauses relatives à l'actionnariat et aux cessions de titres; (iii) des clauses relatives à la sortie d'un actionnaire et (iv) des clauses relatives à la rupture du pacte.</p>
+											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
+										</div>
+									</div>
 								</div>
 							</div>
 
-							<p>Gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat.</p>
-
-							<!-- <img src="img/demos/business-consulting/cases/case-4.jpg" style="max-width: 260px;" class="img-fluid float-end ms-5 mb-4" alt=""> -->
-
 						</div>
 					</div>
-
 				</div>
+
 
 				<section class="section section-text-light section-background m-0" style="background: url('img/gallery/wp.png'); background-size: cover;">
 					<div class="container">
 						<div class="row justify-content-md-center">
 							<div class="col-lg-6 mb-5 mb-lg-0">
-								<h2 class="font-weight-bold">- Contacts</h2>
+								<h2 class="font-weight-bold">Contacts</h2>
 								<p class="custom-opacity-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper.</p>
 								<div class="row">
 									<div class="col-md-6 custom-sm-margin-top">
@@ -261,7 +333,7 @@
 								</div>
 							</div>
 							<div class="col-lg-6 custom-sm-margin-top">
-								<h2 class="font-weight-bold">- Newsletter</h2>
+								<h2 class="font-weight-bold">Newsletter</h2>
 								<form class="contact-form custom-contact-form-style-1 form-errors-light" action="php/contact-form.php" method="POST">
 									<div class="contact-form-success alert alert-success d-none mt-4">
 										<strong>Success!</strong> Your message has been sent to us.
