--- a/tertimonials.html
+++ b/tertimonials.html
@@ -60,7 +60,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-business-consulting.html">
+										<a href="index.html">
 											<img alt="Porto" width="129" height="83" src="img/logos/logo-t.png">
 										</a>
 									</div>
@@ -73,74 +73,74 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link active" href="demo-business-consulting.html">
+														<a class="nav-link active" href="index.html">
 															Accueil
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-about-us.html">
+														<a class="nav-link" href="about-us.html">
 															A propos
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="demo-business-consulting-expertise.html">
-															Projets
+														<a class="dropdown-toggle nav-link" href="expertise.html">
+															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!--ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Finance
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Corporate Restructuring
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Economic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Litigation Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Strategic Consulting
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="demo-business-consulting-expertise-detail.html">
+																<a class="dropdown-item" href="expertise-detail.html">
 																	Tech Consulting
 																</a>
 															</li>
-														</ul>
+														</ul-->
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-cases.html">
-															Partenariat
+														<a class="nav-link" href="cases.html">
+															Projets
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-tertimonials.html">
+														<a class="nav-link" href="tertimonials.html">
 															Financement
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-team.html">
-															Actualites
+														<a class="nav-link" href="team.html">
+															Equipes
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-blog.html">
-															Presse
+														<a class="nav-link" href="blog.html">
+															Actualités
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-business-consulting-contact-us.html">
+														<a class="nav-link" href="contact-us.html">
 															Contacts
 														</a>
 													</li>
@@ -164,12 +164,12 @@
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>- Financement</h1>
+								<h1>Financement</h1>
 								<span class="d-block text-4">Postuler pour un financement</span>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
-									<li><a href="demo-business-consulting.html">Accueil</a></li>
+									<li><a href="index.html">Accueil</a></li>
 									<li class="active">Financement</li>
 								</ul>
 							</div>
@@ -181,7 +181,7 @@
 					<div class="container">
 						<div class="row justify-content-md-center">
 							<div class="col-lg-6 mb-5 mb-lg-0">
-								<h2 class="font-weight-bold">- Contacts</h2>
+								<h2 class="font-weight-bold">Contacts</h2>
 								<p class="custom-opacity-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper.</p>
 								<div class="row">
 									<div class="col-md-6 custom-sm-margin-top">
@@ -240,7 +240,7 @@
 								</div>
 							</div>
 							<div class="col-lg-6 custom-sm-margin-top">
-								<h2 class="font-weight-bold">- Newsletter</h2>
+								<h2 class="font-weight-bold">Newsletter</h2>
 								<form class="contact-form custom-contact-form-style-1 form-errors-light" action="php/contact-form.php" method="POST">
 									<div class="contact-form-success alert alert-success d-none mt-4">
 										<strong>Success!</strong> Your message has been sent to us.
